# paper2code

./: .env.example  .gitignore  Dockerfile  README.md  app.py  app_ko.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  analyzer.py  debugger.py  executor.py  generator.py  orchestrator.py  parser.py
src/models/: __init__.py  code_project.py  paper.py
src/prompts/: analyzer.md  debugger.md  generator.md
src/tools/: __init__.py  code_runner.py  llm_client.py  pdf_parser.py
